# oprc_env

./: .gitignore  README.md  TODO.md  env.hs  exNames.txt  oprc-env.cabal  sampleCSV  sapleCSV  stack.yaml
.stack-work/ghci/12527e28/: cabal_macros.h
.stack-work/install/x86_64-linux/lts-6.35/7.10.3/doc/oprc-env-0.1.0.0/: LICENSE
.stack-work/install/x86_64-linux/lts-6.35/7.10.3/flag-cache/: JuicyPixels-3.2.8.1-592137ac69f06667301d88ba7427ae5e  MonadRandom-0.4.2.3-ac937c09a1f20fc5ce99c84e5c6481fc  StateVar-1.1.0.4-c870ecc28adfa9764b145a54f6a2c147  active-0.2.0.10-a2bdc160d64fe7a1cae34cea39d207e3  adjunctions-4.3-46a7ee5ee90c9c400ac17779bf18e25d  ansi-terminal-0.6.3.1-2d194a3cfb933ca1533ca555c1e456d7  ansi-wl-pprint-0.6.7.3-4298f5bbff1c49df771c4fb2df637e64  async-2.1.1.1-30ff2a8ff5df904c0f3a59b6d99b8500  base-orphans-0.5.4-80aa061a7fc1e4ab8c82be1540afd813  base64-bytestring-1.0.0.1-7a1d6278262346143ad180321424ea8b  bifunctors-5.2-cdddb60fe4333bed9874ee07ed705184  blaze-builder-0.4.0.2-4be9246219f23ebff8645e6173940474  bytes-0.15.2-2d3d1edc04f038fc051ff4390ca57d61  cereal-0.5.2.0-5dc4ca6bc62ba38ba7728470b9a480c5  circle-packing-0.1.0.5-eab3b3968f3f47dee8ccbd0c2db34cd9  colour-2.3.3-0c4e3735159b357562a94a22fd309019  comonad-4.2.7.2-8a8d557583d402d3dcc44e953f8528d5  contravariant-1.4-6dd3e1ecf4a6799d1e6e0916d02994fc  data-default-0.5.3-4c4f075845d560f7a31d444f67905db9  data-default-class-0.0.1-fcbab95490d730dd2489b628499587cd  data-default-instances-base-0.1.0-a8b643fa3324694687ccf38ff53decd3  data-default-instances-containers-0.0.1-15c055a1105557a0002bc839699f89f5  data-default-instances-dlist-0.0.1-5132c0845fae0bd3d662f332984684d4  data-default-instances-old-locale-0.0.1-11796fe51f868bb456c3e6d409bfcc3f  diagrams-1.3.0.1-8aa4073730c676dbe210ea8bffd8d092  diagrams-contrib-1.3.0.12-ad11cc5e04db8b8fd1d98ea9d58d4a7e  diagrams-core-1.3.0.8-4b9d6817643f42a11d37e19f80aca9ea  diagrams-lib-1.3.1.4-a12e65c41b4ef51d952405a73c567103  diagrams-solve-0.1.0.1-7d6a5a907abc27302db9386f35fe5e49  diagrams-svg-1.3.1.10-9f959de04adc252c76fffcb562e9cc07  distributive-0.5.1-88d6416e3e7d1ee10183f494b2da49f6  dlist-0.7.1.2-ff29ea897ce0546ab24638745f33b7b9  dual-tree-0.2.0.9-41110e5eb94a98116faa03631f115ef0  exceptions-0.8.3-d4f6a36a62bf146f0a4221b7c358d663  fail-4.9.0.0-dd8812a5b6b0a0ce790ee5a93be03a9d  fingertree-0.1.1.0-40f1e6845ddd53fd219763dc87c9ce79  force-layout-0.4.0.6-a28129ec2fdd3e7da1a6bd3a45e36be6  free-4.12.4-b213b0326fd662018e7c4384a8c69301  fsnotify-0.2.1-a90f2098bc8cb954beb3cd65a55f89cf  groups-0.4.0.0-c861501b9a4ff01af9a49130710f9d93  (+37 more)
.stack-work/install/x86_64-linux/lts-6.35/7.10.3/lib/x86_64-linux-ghc-7.10.3/oprc-env-0.1.0.0-0NmiVcwzYsL9JFAOsnJYIW/: Env.dyn_hi  Env.hi  MoveCosts.dyn_hi  MoveCosts.hi  SampleVals.dyn_hi  SampleVals.hi
.stack-work/install/x86_64-linux/lts-6.35/7.10.3/lib/x86_64-linux-ghc-7.10.3/oprc-env-0.1.0.0-DrFrqvqEd8GBFfVkSxZTKM/: Drone.hi  EnvView.dyn_hi  EnvView.hi  MoveCosts.hi  SampleVals.dyn_hi  SampleVals.hi
.stack-work/install/x86_64-linux/lts-6.35/7.10.3/pkgdb/: oprc-env-0.1.0.0-5585fefbe56373ace8c30fef94b11996.conf  oprc-env-0.1.0.0-b41d5de9fe0013dae12fbf06149d574c.conf  package.cache
attractorData/anomalous/: data_anomalous_1  data_anomalous_10  data_anomalous_100  data_anomalous_11  data_anomalous_12  data_anomalous_13  data_anomalous_14  data_anomalous_15  data_anomalous_16  data_anomalous_17  data_anomalous_18  data_anomalous_19  data_anomalous_2  data_anomalous_20  data_anomalous_21  data_anomalous_22  data_anomalous_23  data_anomalous_24  data_anomalous_25  data_anomalous_26  data_anomalous_27  data_anomalous_28  data_anomalous_29  data_anomalous_3  data_anomalous_30  data_anomalous_31  data_anomalous_32  data_anomalous_33  data_anomalous_34  data_anomalous_35  data_anomalous_36  data_anomalous_37  data_anomalous_38  data_anomalous_39  data_anomalous_4  data_anomalous_40  data_anomalous_41  data_anomalous_42  data_anomalous_43  data_anomalous_44  (+59 more)
attractorData/nominal/: data_nominal_1  data_nominal_10  data_nominal_100  data_nominal_11  data_nominal_12  data_nominal_13  data_nominal_14  data_nominal_15  data_nominal_16  data_nominal_17  data_nominal_18  data_nominal_19  data_nominal_2  data_nominal_20  data_nominal_21  data_nominal_22  data_nominal_23  data_nominal_24  data_nominal_25  data_nominal_26  data_nominal_27  data_nominal_28  data_nominal_29  data_nominal_3  data_nominal_30  data_nominal_31  data_nominal_32  data_nominal_33  data_nominal_34  data_nominal_35  data_nominal_36  data_nominal_37  data_nominal_38  data_nominal_39  data_nominal_4  data_nominal_40  data_nominal_41  data_nominal_42  data_nominal_43  data_nominal_44  (+59 more)
exe/: .Main.hs.swp  AnimateScenario.hs  AnomalyData.hs  GenerateEnvrionments.hs  Main.hs  RunEnvironments.hs
src/: .Drone.hs.swp  .Ensemble.hs.swp  .Env.hs.swp  .SampleVals.hs.swp  .WorldState.hs.swp  .env.hs.swp  AgentUtils.hs  AnimateOPRC.hs  AnimateReplay.hs  AnomalousPolicy.hs  Drone.hs  Ensemble.hs  Env.hs  EnvGen.hs  EnvView.hs  ExampleSpace.hs  FisherYatesShuffle.hs  GraphOPRC.hs  HierarchicalPolicy.hs  LogScenario.hs  Main.hs  MoveCosts.hs  NeuralNet.hs  ParseOPRC.hs  Policy.hs  PrettyHouse.hs  PrettyOPRC.hs  RLAgent.hs  RandomAgent.hs  RandomOPRC.hs  SampleVals.hs  Scenario.hs  SerializeOPRC.hs  ShapeSweepAgent.hs  SpanningLoop.hs  SpanningTreeAgent.hs  WorldState.hs  env.hs  main.hs
test/: TestSuite.hs
test/environments/: 1.env  10.env  12.env  13.env  14.env  2.env  3.env  4.env  6.env  7.env  8.env  9.env  ClusteryEnv.env  MovesDemonstrator.env  basicCheckered.env  high20Clumped  high20low80complex.env  high80low20complex.env  lspIdeal.env  reallyTinySpanningTreeTester.env  simpleLargeSquare  spanningTreeTester.env  tinySpanningTreeTester.env
